--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -100,6 +100,7 @@
   });
 </script>
 
+
       
 <!-- chat shopify -->
 {{ content_for_footer }}
@@ -201,11 +202,8 @@
   document.addEventListener("DOMContentLoaded", esperarBundles);
 })();
 </script>
-    
 
-      
-
-      
+  {% render 'order-status-tracking' %}
 
 </body>
 </html>
