Organize sections and cleanup

--- a/sections/blog-posts-auto.liquid
+++ b/sections/blog-posts-auto.liquid
@@ -69,7 +69,7 @@
 </div>
 {% schema %}
     {
-        "name": "Blog posts",
+        "name": "Blog posts (auto)",
         "tag": "section",
         "class": "velaFramework",
         "disabled_on": {
@@ -361,7 +361,7 @@
         ],
         "presets": [
             {
-                "name": "Blog posts",
+                "name": "Blog posts (auto)",
                 "category": "4. element"
             }
         ]
