--- a/sections/blog-posts-manual.liquid
+++ b/sections/blog-posts-manual.liquid
@@ -132,7 +132,7 @@
 </div>
 {% schema %}
     {
-        "name": "Blog posts1",
+        "name": "Blog posts (manual)",
         "tag": "section",
         "class": "velaFramework",
         "disabled_on": {
@@ -266,7 +266,7 @@
 		],
         "presets": [
             {
-                "name": "Blog posts1",
+                "name": "Blog posts (manual)",
                 "blocks": [
                     {
                         "type":"article"
