perf: use minified assets

--- a/sections/main-cart.liquid
+++ b/sections/main-cart.liquid
@@ -409,7 +409,7 @@
         });
     </script>
 {% endif %}
-<script src="{{ 'cart.js' | asset_url }}" defer="defer"></script>
+<script src="{{ 'cart.min.js' | asset_url }}" defer="defer"></script>
 {% schema %}
     {
         "name": "Cart page",
