--- a/snippets/footer-javascript.liquid
+++ b/snippets/footer-javascript.liquid
@@ -1,6 +1,6 @@
 {% comment %} Footer JS {% endcomment %}
 <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
-<script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+<script src="{{ 'global.min.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'bootstrap.min.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'enquire.min.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'slick.min.js' | asset_url }}" defer="defer"></script>
