--- a/snippets/header-styles.liquid
+++ b/snippets/header-styles.liquid
@@ -5,8 +5,8 @@
     {{- 'font-awesome.min.css' | asset_url | stylesheet_tag -}}
 {%- endif -%}
 {{- 'bootstrap-grid.css' | asset_url | stylesheet_tag -}}
-{{- 'bootstrap.css' | asset_url | stylesheet_tag -}}
-{{- 'theme.css' | asset_url | stylesheet_tag -}}
+{{- 'bootstrap.min.css' | asset_url | stylesheet_tag -}}
+{{- 'theme.min.css' | asset_url | stylesheet_tag -}}
 {{- 'topbar.css' | asset_url | stylesheet_tag -}}	
 {{- 'header.css' | asset_url | stylesheet_tag -}}	
 {{- 'footer.css' | asset_url | stylesheet_tag -}}	
