--- a/templates/gift_card.liquid
+++ b/templates/gift_card.liquid
@@ -35,7 +35,7 @@
 		{% render 'meta-tags' %}
 		{% render 'header-styles' %}
 		{% render 'header-javascript' %}
-			<script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
+                        <script src="{{ 'global.min.js' | asset_url }}" defer="defer"></script>
 		{{ content_for_header }}
 
 		{%- liquid
