--- a/snippets/footer-javascript.liquid
+++ b/snippets/footer-javascript.liquid
@@ -1,13 +1,7 @@
 {% comment %} Footer JS {% endcomment %}
 <script src="{{ 'shopify_common.js' | shopify_asset_url }}" defer="defer"></script>
 <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'bootstrap.min.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'enquire.min.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'slick.min.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'handlebars.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'jquery.countdown.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'magnific-popup.min.js' | asset_url }}" defer="defer"></script>
-<script src="{{ 'lazysizes.min.js' | asset_url }}" async="async"></script>
+<script src="{{ 'vendor.min.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'vela.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'quickadd.js' | asset_url }}" defer="defer"></script>
 
