--- a/snippets/tracking-pixel.liquid
+++ b/snippets/tracking-pixel.liquid
@@ -78,10 +78,10 @@ src="https://www.facebook.com/tr?id=1311883059920720&ev=PageView&noscript=1"
     {% if request.page_type == 'checkout_thank_you' %}
       var currency = {{ checkout.currency | json }};
       var value = {{ checkout.total_price | money_without_currency | json }};
-      {% for line in checkout.line_items %}
-        fbq('track', 'Purchase', {content_id: {{ line.variant_id }}, value: value, currency: currency, quantity: {{ line.quantity }}});
-        ttq.track('Purchase', {content_id: {{ line.variant_id }}, value: value, currency: currency, quantity: {{ line.quantity }}});
-      {% endfor %}
+      var variantIds = [{% for line in checkout.line_items %}{{ line.variant_id }}{% unless forloop.last %}, {% endunless %}{% endfor %}];
+      var payload = { content_type: 'product', content_ids: variantIds, value: value, currency: currency };
+      fbq('track', 'Purchase', payload);
+      ttq.track('Purchase', payload);
     {% endif %}
   });
 })();
