--- a/snippets/checkout-paymentinfo-tracking.liquid
+++ b/snippets/checkout-paymentinfo-tracking.liquid
@@ -4,6 +4,8 @@
       var form = document.querySelector('form[action*="/checkouts/"]');
       if (form) {
         form.addEventListener('submit', function() {
+          if (typeof fbq === 'function') fbq('track', 'AddPaymentInfo');
+          if (typeof ttq === 'object' && typeof ttq.track === 'function') ttq.track('AddPaymentInfo');
         });
       }
     }
