--- a/snippets/checkout-purchase-tracking.liquid
+++ b/snippets/checkout-purchase-tracking.liquid
@@ -13,5 +13,7 @@
       {% endfor %}
     ];
     var payload = {content_ids: content_ids, contents: contents, value: value, currency: currency};
+    if (typeof fbq === 'function') fbq('track', 'Purchase', payload);
+    if (typeof ttq === 'object' && typeof ttq.track === 'function') ttq.track('Purchase', payload);
   });
 </script>
