--- a/snippets/site-template.liquid
+++ b/snippets/site-template.liquid
@@ -1050,8 +1050,9 @@
               payload.value = variant.price / 100 * qty;
             }
 
-            if (typeof fbq === 'function') fbq('track', 'AddToCart', payload);
-            if (typeof ttq === 'object' && typeof ttq.track === 'function') ttq.track('AddToCart', payload);
+            if (window.analytics && typeof analytics.publish === 'function') {
+              analytics.publish('add_to_cart', payload);
+            }
           });
       }, 500);
     });
@@ -1064,8 +1065,9 @@
       if (!form) return;
 
       if (form.querySelector('[name="checkout"]')) {
-        if (typeof fbq === 'function') fbq('track', 'InitiateCheckout');
-        if (typeof ttq === 'object' && typeof ttq.track === 'function') ttq.track('InitiateCheckout');
+        if (window.analytics && typeof analytics.publish === 'function') {
+          analytics.publish('initiate_checkout');
+        }
       }
     });
   });
@@ -1081,8 +1083,9 @@
 
       var query = input.value;
       var payload = { search_string: query };
-      if (typeof fbq === 'function') fbq('track', 'Search', payload);
-      if (typeof ttq === 'object' && typeof ttq.track === 'function') ttq.track('Search', payload);
+      if (window.analytics && typeof analytics.publish === 'function') {
+        analytics.publish('search', payload);
+      }
     });
   });
 </script>
