--- a/snippets/checkout-paymentinfo-tracking.liquid
+++ b/snippets/checkout-paymentinfo-tracking.liquid
@@ -4,8 +4,9 @@
       var form = document.querySelector('form[action*="/checkouts/"]');
       if (form) {
         form.addEventListener('submit', function() {
-          if (typeof fbq === 'function') fbq('track', 'AddPaymentInfo');
-          if (typeof ttq === 'object' && typeof ttq.track === 'function') ttq.track('AddPaymentInfo');
+          if (window.analytics && typeof analytics.publish === 'function') {
+            analytics.publish('add_payment_info');
+          }
         });
       }
     }
