Load customer events handler

--- a/snippets/footer-javascript.liquid
+++ b/snippets/footer-javascript.liquid
@@ -39,6 +39,9 @@
   <script src="{{ 'quickview.js' | asset_url }}" defer="defer"></script>
 {%- endif-%}
 
+<!-- Customer Events handling -->
+<script src="{{ 'customer-events.js' | asset_url }}" defer="defer"></script>
+
 {%- if request.design_mode -%}
   <script>window.themeDebug = true;</script>
   <script src="{{ 'design-mode.js' | asset_url }}" defer="defer"></script>
