--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -9,7 +9,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-M5PK3TVP');</script>
 <!-- End Google Tag Manager -->
-
+{% include 'ultimate-datalayer' %}
 
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
