Add svg snippet to password layout

--- a/layout/password.liquid
+++ b/layout/password.liquid
@@ -76,6 +76,7 @@
 		<main id="MainContent" class="password-main">
 			{{ content_for_layout }}
 		</main>
-		{% include 'footer-javascript' %}
-	</body>
+                {% include 'footer-javascript' %}
+                {% render 'svg' %}
+        </body>
 </html>
